# browser-use-safe

./: .env.example  README.md  pyproject.toml
browser_use/: __init__.py  cli.py  config.py  init_cmd.py  observability.py  utils.py
browser_use/agent/: service.py
browser_use/browser/: demo_mode.py  profile.py  session.py  views.py
browser_use/browser/cloud/: cloud.py  views.py
browser_use/browser/watchdogs/: aboutblank_watchdog.py
browser_use/dom/: service.py
browser_use/llm/: __init__.py  models.py
browser_use/llm/browser_use/: __init__.py  chat.py
browser_use/mcp/: client.py  server.py
browser_use/sandbox/: __init__.py  sandbox.py  views.py
browser_use/skill_cli/: browser.py  daemon.py  install.sh  install_lite.sh  main.py  profile_use.py  sessions.py
browser_use/skill_cli/commands/: browser.py  cloud.py  doctor.py
browser_use/skills/: __init__.py  service.py  utils.py  views.py
browser_use/sync/: auth.py  service.py
browser_use/telemetry/: service.py
browser_use/tokens/: service.py
browser_use/tools/: service.py
browser_use/tools/registry/: service.py
examples/: demo_mode_example.py  simple.py
examples/browser/: cloud_browser.py  custom_headers.py
examples/cloud/: 03_structured_output.py
examples/features/: csv_file_generation.py  judge_trace.py  rerun_history.py  save_as_pdf.py  secure.py
examples/getting_started/: 01_basic_search.py  02_form_filling.py  03_data_extraction.py  04_multi_step_task.py
examples/integrations/agentmail/: 2fa.py
examples/models/: browser_use_llm.py  bu_oss.py
examples/sandbox/: example.py
examples/use-cases/: buy_groceries.py  pcpartpicker.py  phone_comparison.py
tests/ci/: conftest.py  evaluate_tasks.py  test_cli_install_init.py  test_extension_config.py  test_llm_retries.py  test_sandbox_structured_output.py
tests/ci/browser/: test_cloud_browser.py  test_profile_copy.py
tests/ci/infrastructure/: test_config.py  test_no_external_calls.py
tests/ci/models/: test_llm_browseruse.py
